--- a/index.html
+++ b/index.html
@@ -5,9 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Quiz App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <title>Quiz-App</title>
 </head>
-<body>
-    
+<body onload="init()">
+
+  <nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">QuizApp</span>
+    </div>
+  </nav>
+
+    <section class="quizScreen" id="quizScreen">
+
+      <div class="card width-30-rem">
+
+        <img src="img/doors.jpg" class="card-img-top" alt="doors">
+        <div class="card-body padding-16-16-8-16">
+          <h5 id="question" class="card-title">Frage</h5>
+
+          <div onclick="answer(1)" class="card quiz-answer-card mb-2">
+            <div id="option_1" class="card-body">
+              Antwort
+            </div>
+          </div>
+
+          <div onclick="answer(2)" class="card quiz-answer-card mb-2">
+            <div id="option_2" class="card-body">
+              Antwort
+            </div>
+          </div>
+
+          <div type="button" onclick="answer(3)" class="card quiz-answer-card mb-2">
+            <div id="option_3" class="card-body">
+              Antwort
+            </div>
+          </div>
+
+          <div type="button" onclick="answer(4)" class="card quiz-answer-card mb-2">
+            <div id="option_4" class="card-body">
+              Antwort
+            </div>
+          </div>
+        </div>
+
+        <div class="questionFooter">
+          <span class="questionCounterContainer">
+            <b id="currentQuestionCount">1</b> von <b id="maxQuestionCount">5</b>
+          </span>
+
+          <div id="buttonContainer">
+            <button id="nextButton" onclick="nextQuestion()" type="button" class="btn btn-primary" disabled>Naechste Frage</button>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
+
+
 </body>
 </html>
