--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="img/quiz.png">
     <title>Quiz-App</title>
 </head>
 <body onload="init()">
@@ -19,10 +20,10 @@
 
     <section class="quizScreen" id="quizScreen">
 
-      <div class="card width-30-rem">
+      <div id="quizCard" class="card width-30-rem">
 
-        <img src="img/doors.jpg" class="card-img-top" alt="doors">
-        <div class="card-body padding-16-16-8-16">
+        <img id="img" src="img/doors.jpg" class="card-img-top" alt="doors">
+        <div id="cardBody" class="card-body padding-16-16-8-16">
           <h5 id="question" class="card-title">Frage</h5>
 
           <div onclick="answer(1)" class="card quiz-answer-card mb-2">
@@ -50,13 +51,19 @@
           </div>
         </div>
 
-        <div class="questionFooter">
-          <span class="questionCounterContainer">
-            <b id="currentQuestionCount">1</b> von <b id="maxQuestionCount">5</b>
-          </span>
+        <div class="footer" id="footer">
+          <div class="countAndButton">
+            <span id="questionCounterContainer" class="questionCounterContainer">
+              <b id="currentQuestionCount">1</b> von <b id="maxQuestionCount">5</b>
+            </span>
 
-          <div id="buttonContainer">
-            <button id="nextButton" onclick="nextQuestion()" type="button" class="btn btn-primary" disabled>Naechste Frage</button>
+            <div id="buttonContainer">
+              <button id="nextButton" onclick="nextQuestion()" type="button" class="btn btn-primary" disabled>Naechste Frage</button>
+            </div>
+          </div>
+
+          <div class="progress">
+            <div id="progressBar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
           </div>
         </div>
 
